--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'New England -- History -- 19th century -- Fiction'
 - !lcsh 'Conduct of life -- Fiction'
 - !lcsh 'Missing persons -- Fiction'
+- GITenberg
 title: Robert Coverdale's Struggle; Or, on the Wave of Success
 url: http://www.gutenberg.org/ebooks/30372
